# ClamAVClient

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml  deploy-pages.yml
docs/: index.html
scripts/: build-desktop.mjs  install-autostart.sh  install-wrapper.sh  postinstall-linux.sh  postinstall-macos.sh  postinstall-windows.ps1  prepare-clamav.mjs  preremove-linux.sh  preremove-macos.sh  preremove-windows.ps1  run-elevated.sh
src/: main.js  styles.css
src-tauri/: Cargo.toml  app.manifest  com.openai.clamavclient.plist  com.openai.clamavclient.policy  com.openai.clamavclient.service  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: clamavclient-linux.sh  clamavclient-macos.sh  postinstall-linux.sh  postinstall-windows.ps1  preremove-linux.sh  preremove-windows.ps1
src-tauri/src/: auto_update.rs  clamav.rs  commands.rs  main.rs  models.rs  paths.rs  quarantine.rs  storage.rs  watcher.rs
