[package]
name = "clamavclient"
version = "0.2.0"
description = "ClamAvClient, client ClamAV multi-plateforme avec Tauri"
authors = ["OpenAI Codex"]
edition = "2021"

[package.metadata.bundle]
name = "ClamAVClient"
identifier = "com.openai.clamavclient"
icon = ["icons/icon.png"]

[package.metadata.windows]
# Demande d'élévation UAC pour Windows
msi = { language = "fr-FR" }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }
